Fixed banner positions on mobile

--- a/src/main/webapp/css/banners.css
+++ b/src/main/webapp/css/banners.css
@@ -9,7 +9,7 @@
 
 @media (max-width : 900px) {
   .banner-beni3 {
-    background-position-x: -130px;
+    background-position-x: -90px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -37,7 +37,7 @@
 
 @media (max-width : 900px) {
   .banner-benji {
-    background-position-x: -130px;
+    background-position-x: -90px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -51,7 +51,7 @@
 
 @media (max-width : 900px) {
   .banner-benji2 {
-    background-position-x: -130px;
+    background-position-x: -40px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -65,7 +65,7 @@
 
 @media (max-width : 900px) {
   .banner-benji3 {
-    background-position-x: -130px;
+    background-position-x: -90px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -79,7 +79,7 @@
 
 @media (max-width : 900px) {
   .banner-benji4 {
-    background-position-x: -130px;
+    background-position-x: -40px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -121,7 +121,7 @@
 
 @media (max-width : 900px) {
   .banner-oliver-benji {
-    background-position-x: -130px;
+    background-position-x: 0;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -135,7 +135,7 @@
 
 @media (max-width : 900px) {
   .banner-oliver-benji2 {
-    background-position-x: -130px;
+    background-position-x: -40px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -149,7 +149,7 @@
 
 @media (max-width : 900px) {
   .banner-oliver-steve {
-    background-position-x: -130px;
+    background-position-x: -30px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -163,7 +163,7 @@
 
 @media (max-width : 900px) {
   .banner-oliver {
-    background-position-x: -130px;
+    background-position-x: -40px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -208,7 +208,7 @@
 
 @media (max-width : 900px) {
   .banner-batman {
-    background-position-x: -130px;
+    background-position-x: -190px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -306,7 +306,7 @@
 
 @media (max-width : 900px) {
   .banner-superman3 {
-    background-position-x: -130px;
+    background-position-x: -90px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -452,7 +452,7 @@
 
 @media (max-width : 900px) {
   .banner-jon-snow2 {
-    background-position-x: -130px;
+    background-position-x: -40px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -466,7 +466,7 @@
 
 @media (max-width : 900px) {
   .banner-winter-is-coming {
-    background-position-x: -130px;
+    background-position-x: -100px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -497,7 +497,7 @@
 
 @media (max-width : 900px) {
   .banner-avengers-cap {
-    background-position-x: -130px;
+    background-position-x: -200px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -539,7 +539,7 @@
 
 @media (max-width : 900px) {
   .banner-avengers-ironman {
-    background-position-x: -130px;
+    background-position-x: 0;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -567,7 +567,7 @@
 
 @media (max-width : 900px) {
   .banner-avengers-trinity {
-    background-position-x: -130px;
+    background-position-x: -100px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -595,7 +595,7 @@
 
 @media (max-width : 900px) {
   .banner-spiderman {
-    background-position-x: -130px;
+    background-position-x: 0;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1055,7 +1055,7 @@
 
 @media (max-width : 900px) {
   .banner-anakin {
-    background-position-x: -130px;
+    background-position-x: -90px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1111,7 +1111,7 @@
 
 @media (max-width : 900px) {
   .banner-anakin5 {
-    background-position-x: -130px;
+    background-position-x: -220px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1125,7 +1125,7 @@
 
 @media (max-width : 900px) {
   .banner-luke-vader {
-    background-position-x: -130px;
+    background-position-x: -90px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1153,7 +1153,7 @@
 
 @media (max-width : 900px) {
   .banner-luke-vader3 {
-    background-position-x: -130px;
+    background-position-x: -170px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1181,7 +1181,7 @@
 
 @media (max-width : 900px) {
   .banner-star-wars-poster {
-    background-position-x: -130px;
+    background-position-x: -220px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1195,7 +1195,7 @@
 
 @media (max-width : 900px) {
   .banner-star-wars-trilogy {
-    background-position-x: -130px;
+    background-position-x: 0;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1209,7 +1209,7 @@
 
 @media (max-width : 900px) {
   .banner-vader {
-    background-position-x: -130px;
+    background-position-x: 0;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
@@ -1223,7 +1223,7 @@
 
 @media (max-width : 900px) {
   .banner-vader2 {
-    background-position-x: -130px;
+    background-position-x: -40px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
   }
